<resources>
    <string name="app_name">APPAPOYO</string>
    <string name="firstName" />
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contrasenia">Contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="bienvenido">Bienvenido a la Aplicación de Apoyo</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="opcion_3">Opción 3</string>
    <string name="opcion_4">Opción 4</string>
    <string name="opcion_5">Opción 5</string>
    <string name="opcion_6">Opción 6</string>
    <string name="opcion_7">Opción 7</string>
    <string name="opcion_8">Opción 8</string>
    <string name="txt_titulo">TextView</string>
    <string name="actividades">ACTIVIDADES</string>
    <string name="registrar_usuario" />
    <string name="gestion" />
    <string name="gestion1">Gestion</string>
    <string name="titulo_registrar" />
    <string name="titulo_registrar_cuenta">Registrar Cuenta</string>
    <string name="actividad_1">LA COMUNICACION</string>
    <string name="actividad_2">El CUENTO</string>
    <string name="actividad_3">EL ALFABETO</string>
    <string name="actividad_4">EL SUSTANTIVO Y ARTÍCULO</string>
    <string name="actividad_5">PALABRAS DIMINUTIVAS Y AUMENTATIVAS</string>
    <string name="actividad_6">LAS SILABAS</string>
    <string name="titulo_po1">LA COMUNICACIÓN</string>
</resources>